# Chariot

./: .gitignore  Cargo.toml  Makefile  README.md
crates/drs/: Cargo.toml
crates/drs/src/: drs.rs  error.rs  lib.rs
crates/file_formats/dat/: Cargo.toml
crates/file_formats/dat/examples/: read-empires.rs  read-tileedge.rs
crates/file_formats/dat/src/: error.rs  lib.rs
crates/file_formats/dat/src/empires/: age.rs  civ.rs  graphic.rs  mod.rs  player_color.rs  random_map.rs  research.rs  resource.rs  sound.rs  terrain_block.rs  terrain_restrictions.rs  unit.rs
crates/file_formats/dat/src/tileedge/: mod.rs
crates/file_formats/language/: Cargo.toml
crates/file_formats/language/src/: error.rs  language.rs
crates/file_formats/scn/: Cargo.toml
crates/file_formats/scn/src/: error.rs  lib.rs  map.rs  player_data.rs  player_resources.rs  player_unit.rs  scn.rs
crates/identifier/: Cargo.toml
crates/media/: Cargo.toml
crates/media/src/: lib.rs  media.rs  renderer.rs  texture_builder.rs
crates/palette/: Cargo.toml
crates/palette/src/: error.rs  palette.rs
crates/resource/: Cargo.toml
crates/resource/src/: drs_manager.rs  error.rs  game_dir.rs  render_command.rs  shape_manager.rs  shape_metadata.rs
crates/slp/: Cargo.toml
crates/slp/src/: error.rs  lib.rs  slp.rs
crates/types/: Cargo.toml
crates/types/src/: fixed.rs
src/: main.rs
src/action/: move_to_position.rs
src/ecs/: world.rs
src/ecs/component/: action_queue_component.rs  decal_component.rs  graphic_component.rs  transform_component.rs  unit_component.rs  velocity_component.rs
src/ecs/component/action/: move_to_position.rs
src/ecs/render_system/: decal_render_system.rs  graphic_render_system.rs  render_system.rs  terrain_render_system.rs  tile_debug_render_system.rs  unit_selection_render_system.rs
src/ecs/resource/: action_batcher.rs  input.rs  path_finder.rs  players.rs  render.rs  view_projector.rs  viewport.rs
src/ecs/resource/terrain/: border.rs  elevation.rs  terrain.rs
src/ecs/system/: animation_system.rs  camera_input_system.rs  camera_position_system.rs  decal_system.rs  grid_system.rs  occupied_tile_system.rs  system.rs  unit_action_system.rs  unit_selection_system.rs  velocity_system.rs
src/ecs/system/action/: move_to_position.rs
src/game/: game.rs
src/game/state/: game_state.rs  scenario_game_state.rs
src/util/: unit.rs
tools/slp_viewer/: Cargo.toml
tools/slp_viewer/src/: main.rs
