[package]
name = "chariot_resource"
description = """
    Chariot resource management crate
"""
edition = "2018"
license = "MIT"
version = "0.1.0"
keywords = ["aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
error-chain = "0.12.1"
nalgebra = "0.19.0"

[dependencies.chariot_identifier]
path = "../identifier"
[dependencies.chariot_media]
path = "../media"
[dependencies.chariot_types]
path = "../types"
[dependencies.chariot_drs]
path = "../drs"
[dependencies.chariot_palette]
path = "../palette"
[dependencies.chariot_slp]
path = "../slp"
