[package]
name = "chariot_scn"
description = """
    A library for reading/writing Age of Empires (1997) scenario files
"""
edition = "2018"
license = "MIT"
version = "0.1.0"
keywords = ["scn", "scenario", "aoe", "age", "empires", "genie", "engine"]
authors = ["Kevin Fuller <angered.ghandi@gmail.com>"]

[dependencies]
error-chain = "0.12.1"
chariot_io_tools = "0.1"

[dependencies.chariot_identifier]
path = "../../identifier"

[dependencies.chariot_dat]
path = "../dat"

[dev-dependencies]
clap = "2.33.0"
